sistema de grid e descriçao

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="conteiner">
             <div class="square">
                 <div class="card">
-                    <img src="images/Joker_Folie_à_Deux_poster.jpg" alt="joker">
+                    <img src="images/joker.jpg" alt="joker">
                 </div>
                 <div class="desc">
                     <article>
