--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <h2>Inside Out 2</h2>
                             <p>Teenager Riley's mind headquarters is undergoing a sudden demolition to make room
                                 for something entirely unexpected: new Emotions! Joy, Sadness, Anger,
-                                Fear and Disgust, aren’t sure how to feel when Anxiety shows up.</p>
+                                Fear and Disgust.</p>
                         </article>             
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                         <article>
                             <h2>Wolverine</h2>
                             <p>A listless Wade Wilson toils away in civilian life with his days as the morally flexible mercenary, Deadpool, behind him. 
-                                But when his homeworld faces an existential threat, Wade must reluctantly suit-up again with an even more reluctant Wolverine.</p>
+                                But when his homeworld faces an existential threat.</p>
                         </article>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                         <article>
                             <h2>Moana 2</h2>
                             <p>After receiving an unexpected call from her wayfinding ancestors, Moana journeys alongside Maui and a new crew to
-                                 the far seas of Oceania and into dangerous, long-lost waters for an adventure unlike anything she's ever faced.</p>
+                                 the far seas of Oceania and into dangerous.</p>
                         </article>
                         
                     </div>
@@ -155,7 +155,7 @@
                         <article>
                             <h2>Venom: The Last Dance</h2>
                             <p>After receiving an unexpected call from her wayfinding ancestors, Moana journeys alongside Maui and a new crew to the far seas
-                             of Oceania and into dangerous, long-lost waters for an adventure unlike anything she's ever faced.</p>
+                             of Oceania and into dangerous.</p>
                         </article>
                         
                     </div>
