--- a/detail.html
+++ b/detail.html
@@ -56,7 +56,13 @@
                             <div class="video-inner" id="video-inner">
                                 <div class="video-card">
                                     <iframe id="trailer-1" src="https://www.youtube.com/embed/szby7ZHLnkA" frameborder="0" allowfullscreen></iframe>
+                                </div>     
+                                <div class="video-card">
+                                    <iframe id="trailer-1" src="https://www.youtube.com/embed/qSu6i2iFMO0" frameborder="0" allowfullscreen></iframe>
                                 </div>                       
+                            </div>
+                            
+                                                  
                             </div>
                         </div>                                            
                     </div>
