slider list e alteraçoes de proporçoes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="other">
                     
-                    <a class="other-movies" href="test2.html">
+                    <a class="other-movies" href="detail.html">
                         <div class="mini-card">
                             <img src="images/sonic.jpg" alt="Inside Out">
                         </div>
