--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
            
             
             <div class="conteiner">
-                <a class="square" href="detail.html">
+                <a class="square" href="detail2.html">
                     <div class="card">
                         <img src="images/joker.jpg" alt="joker">
                     </div>
